fixed text overspill in botd

--- a/src/css/episodes/BurgerOfTheDay.css
+++ b/src/css/episodes/BurgerOfTheDay.css
@@ -13,6 +13,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: large;
+  max-width: 180px;
+  min-width: 150px;
 }
 
 .bottom {
